# ASL-Transfer-learning

./: .gitignore  Caddyfile.dev  README.md  README_ME.md  asl_transfer_learning.ipynb  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
backend/: .gitignore  Dockerfile  main.py  model.py  requirements.txt  upload.py
backend/modele/mobilenetv2/: mobilenetv2_asl_int8.onnx
backend/modele_2/mobilenetv2/: mobilenetv2_asl_int8.onnx
backend/routes/: classes.py  predict.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte
