[project]
name = "projekt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.136.3",
    "numpy>=2.4.6",
    "onnxruntime>=1.26.0",
    "pillow>=12.2.0",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]
